css/style.css
html{
    font-size: 16px;
    scroll-behavior: smooth;
    scroll-snap-type: y proximity;
    overflow-y: scroll;
}

@font-face {
    src: url(/assets/fonts/AGENCYR.ttf);
    font-family: agency fb;
  }

*{
    font-family: agency fb;
    margin: 0;
    padding: 0;
}


header{
    display: flex;
    justify-content: center;
    position: fixed;
    width: 100%;
    transition: .8s;

}

ul{
    list-style: none;
    display: flex;
    flex-direction: row;    
}

a{
    width: 7rem;
    padding: 0.6rem 0;
    text-align: center;
    font-size: 1.3rem;
    color:#ffff;
    text-shadow: 1.5px 1.5px rgb(39, 39, 39);
    text-decoration: none;
    display: block;
    
}
a:hover{
    background-color: aquamarine;
    transition: .8s;
    color: rgb(38, 56, 56);
    text-shadow: none;
}

/* #showNavbar{
    background-image: linear-gradient(to top right, #2E2C51, #A48779);
    transition: .8s;
} */

section{
    background-color: #ffff;
    height: 100vh;
    width: 100%;
    display: flex;
    align-items: center; 
    justify-content: center;
    flex-direction: column;
    scroll-snap-align: center;
}

#home{
    background-image: url("../assets/imgs/bg/bg13.jpg");
    background-size: cover;
    background-repeat: no-repeat;

}
#homeDiv{
    width: 20rem;
    margin: 2rem 0 0 -57rem;
}
#home #homeDiv h1 {    
    font-size: 4rem;
    color:#ffff;
    text-shadow: 2px 2px black;
}

#home #text{
    width: 35rem;
    margin: -24rem -40rem 0 0;
}


#home #text h2 {
    font-size: 2rem;
    margin-bottom: 2rem;
    color:#ffff;
    text-shadow: rgb(25, 29, 32) 1px 1px;
}

#homep{
    font-size: 1.5rem;
    color:#ffff;
    text-shadow: rgb(25, 29, 32) 1px 1px;
}

